# PaperFlow

./: .env.example  .gitignore  LICENSE  README.md  SYSTEM_STATUS.md  TODO.md  VERIFICATION_FLOW.md  environment.yml  index.html  pyproject.toml  pytest.ini  requirements.txt  start.bat
.github/workflows/: ci.yml  pages.yml
agents/: coldstart-agent.md  daily-push-agent.md  feedback-agent.md  master-coordinator.md  must-read-manager.md  profile-report-agent.md  reading-agent.md
agents/coldstart-agent/: main.py
agents/daily-push-agent/: main.py
agents/feedback-agent/: main.py
agents/master-coordinator/: main.py
agents/master_coordinator/: __init__.py  main.py
agents/must-read-manager/: main.py
agents/profile-report-agent/: main.py
agents/reading-agent/: main.py
agents/role-manager/: main.py
agents/wiki-agent/: __init__.py  main.py
assets/README/: README_CN.md  README_ES.md  README_FR.md  README_JA.md  README_KO.md  README_PT.md
commands/: add-must-read.md  cold-start.md  daily-push.md  generate-weekly-report.md  remove-must-read.md  show-profile.md
config/: conferences.yaml  direction_lexicon.json  direction_lexicon.py  journals.yaml  roles.example.json  scoring_weights.yaml  user-profile-template.json
deployments/desktop/: README.md  __init__.py  server.py
docs/: README.md  RELEASE-v0.1.0.md  architecture.md  benchmark.md  configuration.md  current_status.md  dataset-collection-plan.md  dataset-four-layers-summary.md  dataset-generation-summary.md  dataset-schema.md  dataset-usage-guide.md  feedback-loop.md  feishu-doc-export.md  feishu-webhook-setup.md  paper-human-eval-template.md  providers.md  quickstart.md  reproduce.md  system-design.md
experiments/: README.md  REPRODUCE.md
experiments/ablation/: run_paperflow_fixed_profile_ablation.py  run_paperflow_fixed_profile_ablation_resumable.py  run_paperflow_mechanism_ablation_resumable.py
models/: README.md
paperflow/: __init__.py  cli.py  roles.py
scripts/: __init__.py  add_must_read.py  cleanup_corrupted_pushes.py  clear_database.py  cold_start.py  collect_all_papers.py  collect_papers_by_date.py  daily_push_test.py  doctor.py  download_embedding_model.py  drift_engine.py  feishu_feedback_cli.py  get_chat_ids.py  how_to_get_chat_id.py  init.bat  init_db.py  init_profiles_from_roles.py  init_project.sh  init_user_metadata.py  precollect_papers_by_day.py  quick_feedback.py  quick_test.py  role_guide.py  runtime_bootstrap.py  show_profile.py  simulate_feedback.py  test_e2e.py  test_fetcher.sh  test_pdf_parser.py  test_pdf_reading.py  test_push_feedback.py  test_reading.py  view_db.py
skills/: __init__.py
tests/: conftest.py  test_clear_database.py  test_cli.py  test_daily_push_fallback.py  test_db_ops.py  test_desktop_gui.py  test_feedback_regressions.py  test_feishu_reporter.py  test_interest_drift.py  test_journal_fetcher.py  test_llm_parser.py  test_must_read_manager.py  test_paper_stack.py  test_pdf_parser.py  test_profile_bootstrap.py  test_providers.py  test_reading_report_flow.py  test_role_storage.py  test_runtime_bootstrap.py  test_scheduler.py  test_webhook_server.py  test_weekly_report_routing.py  test_wiki_store.py
(+203 files in other folders)
