[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paperflow"
version = "0.1.0"
description = "Personalized scientific-paper recommendation, reading, and reporting."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "PaperFlow Contributors" },
]
keywords = [
    "paper-recommendation",
    "scientific-papers",
    "research-assistant",
    "llm",
    "embeddings",
    "personalization",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "typer>=0.12.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.1",
    "numpy>=1.24.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
openai = ["openai>=1.10.0"]
anthropic = ["anthropic>=0.18.0"]
local = ["sentence-transformers>=5.4.0", "huggingface-hub>=1.0.0"]
fetch = [
    "feedparser>=6.0.10",
    "openreview-py>=1.46.1",
]
parsing = [
    "PyMuPDF>=1.23.0",
    "pdfplumber>=0.10.0",
    "Pillow>=10.0.0",
    "rapidocr-onnxruntime>=1.3.0",
]
all = [
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    "sentence-transformers>=5.4.0",
    "huggingface-hub>=1.0.0",
    "feedparser>=6.0.10",
    "openreview-py>=1.46.1",
    "PyMuPDF>=1.23.0",
    "pdfplumber>=0.10.0",
    "Pillow>=10.0.0",
    "rapidocr-onnxruntime>=1.3.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "black>=24.0.0",
]

[project.urls]
Homepage = "https://github.com/OpenRaiser/PaperFlow"
Repository = "https://github.com/OpenRaiser/PaperFlow"
Documentation = "https://github.com/OpenRaiser/PaperFlow#readme"
Issues = "https://github.com/OpenRaiser/PaperFlow/issues"
"Benchmark" = "https://huggingface.co/datasets/OpenRaiser/PaperFlow"

[project.scripts]
paperflow = "paperflow.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["paperflow*"]
exclude = [
    "tests*",
    "experiments*",
    "deployments*",
    "data*",
    "docs*",
    "release*",
    "models*",
    "ablation_packages*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
markers = [
    "unit: unit tests (fast, no I/O)",
    "integration: integration tests (database, network)",
    "slow: slow tests excluded from default runs",
]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.black]
line-length = 110
target-version = ["py310", "py311", "py312"]
